# Architektur-Cosmos

./: .desktop-build-request  .gitignore  404.html  AGENTS.md  DEPLOYMENT.md  README.md  SECURITY.md  STAND.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  eslint.config.mjs  index.html  index.txt  manifest.webmanifest  next.config.js  package-lock.json  package.json  sw.js  tailwind.config.ts  wrangler.jsonc
404/: index.html
404 2/: index.html
_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.html  index.txt
_not-found 2/: __next._head.txt  __next._not-found.__PAGE__.txt  __next._tree.txt  index.txt
app/: claude-design.css  globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
assets/: GLTFLoader-BOFkYaAw.js  derive.worker-IJQvlHVg.js  event-BCwlg7Cn.js  index-CFVOrgou.css  index.es-Cgiq0HGa.js  pdf.worker.min-CGHQPv25.js  splat-import-B8-MFKv6.js  video-splat-CqWmhsqZ.js  virtual_pwa-register-DZBkkECV.js
atlas/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.atlas.__PAGE__.txt  __next.atlas.txt  index.html  index.txt
atlas 2/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.atlas.__PAGE__.txt  __next.atlas.txt  index.html
config/: kosmo-security-baseline.json
data/: agent-decisions.json  archive-preview.json  brain-rules.json  brain-tools.json  claude-kosmooverseer-implementation-intake-2026-06-16.json  database-analysis-preview.json  entry-draft-template.json  ingenbohl-pdf-extraction-decision-brief-2026-06-13.json  ingenbohl-pdf-extraction-decision-brief-2026-06-14.json  ingenbohl-pdf-extraction-decision-brief-2026-06-15.json  ingenbohl-pdf-extraction-decision-brief-2026-06-16.json  ingenbohl-pdf-extraction-decision-brief-2026-06-30.json  ingenbohl-pdf-extraction-decision-brief-2026-07-02.json  ingenbohl-pdf-extraction-decision-brief-2026-07-21.json  kosmo-architecture-ontology-seed-2026-06-14.json  kosmo-architecture-ontology-seed-2026-06-15.json  kosmo-architecture-ontology-seed-2026-06-16.json  kosmo-architecture-ontology-seed-2026-06-30.json  kosmo-architecture-ontology-seed-2026-07-22.json  kosmo-architecture-ontology-seed-check-2026-06-14.json  kosmo-architecture-ontology-seed-check-2026-06-15.json  kosmo-architecture-ontology-seed-check-2026-06-16.json  kosmo-architecture-ontology-seed-check-2026-06-30.json  (+1014 more)
docs/: data-model.md  (+84 more)
kosmo-orbit/apps/kosmo-orbit/src-tauri/: Cargo.toml  tauri.conf.json
kosmo-orbit/apps/kosmo-orbit/src-tauri/capabilities/: charakter.json  default.json
kosmo-orbit/apps/kosmo-orbit/src-tauri/icons/: icon.icns
kosmo-orbit/apps/kosmo-orbit/src-tauri/src/: lib.rs  main.rs
kosmo-orbit/tools/homestation-bridge/: README.md  pyproject.toml  test_blender_worker.py  test_bridge_haerte.py  test_fehlerbericht.py  test_kosmo_worker_comfyui.py  test_lora_empfaenger.py  verifiziere_andocken.py
kosmo-orbit/tools/homestation-bridge/kosmo_bridge/: blender_worker.py  kosmo_worker_comfyui.py  lizenz.py  lora_empfaenger.py  main.py  sicherheits_log.py
(+4323 files in other folders)
