[package]
name = "kosmo-orbit"
version = "0.8.1"
description = "KosmoOrbit — die Architektur-Designzentrale"
authors = ["Imperigo"]
edition = "2021"

[lib]
name = "kosmo_orbit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# v0.7.2 §9 (Paket 07, Stream W3-F): "tray-icon" für den System-Tray
# (TrayIconBuilder in lib.rs, Menü Öffnen/Beenden) + "image-png" fürs Tray-
# Icon (aus dem bestehenden `icons/`-Satz, PNG-Dekodierung zur Laufzeit).
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
